Body overflow-x set to hidden to avoid the scroll

--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0f2f1;
 }
